# raid

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .releaserc  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
raid/: __init__.py  __main__.py  formatter.py  parsing.py
raid/locales/: en.py  uk.py
