[tool.poetry]
name = "raid"
version = "1.0.0"
description = """A simple tool to get immediate notifications in Slack once your \
    Ukrainian colleagues become unavailable due to an air raid or artillery shelling \
    threats."""
authors = ["Eduard Malokhvii <malokhvii.ee@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/malokhvii-eduard/raid"
repository = "https://github.com/malokhvii-eduard/raid"

[tool.poetry.scripts]
raid = "raid:app"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.3"
deep-translator = "^1.9.0"
loguru = "^0.6.0"
python-i18n = "^0.3.9"
pytz = "^2022.4"
slack-sdk = "^3.19.1"
Telethon = "^1.25.4"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
